# ipc-channel-example

./: Cargo.toml  README.md
src/: client.rs  server.rs
