[package]
name = "IpcInternalServer"
version = "0.1.0"
edition = "2021"

[dependencies]
ipc-channel = "0.16"
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"